--- a/afk-comps/src/app/components/shared/dropdown/dropdown.module.css
+++ b/afk-comps/src/app/components/shared/dropdown/dropdown.module.css
@@ -63,8 +63,7 @@
 	padding: 0;
 	list-style: none;
 	display: none;
-	max-height: 15rem;
-	overflow-y: auto;
+	max-height: auto;
 	width: 100%;
 	left: 0;
 	top: calc(100% + .25rem);
